gcc/testsuite/gm2/iso/const/fail/testord.mod
MODULE testord ;

CONST
   foo = ORD (ch) ;

VAR
   ch: CHAR ;
BEGIN

END testord.
